# chem_bench

./: .gitignore  README.md  README_add.md  environment.yml  pyproject.toml  requirements_v1.0.md
ChemBench/: __init__.py  api.py  cli.py
ChemBench/config/: __init__.py  condition_alpha_cpu.json  condition_alpha_cpu_large.json  condition_alpha_gpu.json  condition_alpha_gpu_large.json  condition_beta_cpu.json  condition_beta_cpu_large.json  condition_beta_gpu.json  condition_beta_gpu_large.json  condition_gamma_cpu.json  condition_gamma_cpu_large.json  condition_gamma_gpu.json  condition_gamma_gpu_large.json  config_profile_large_fast.json  config_profile_large_fast_gpu.json  config_profile_medium_balanced.json  config_profile_medium_balanced_gpu.json  config_profile_small_all_models.json  config_profile_small_all_models_gpu.json  default_config.json  default_config_gpu.json  tuning_config.json
ChemBench/data/: validation.py
ChemBench/features/: __init__.py  combine.py  ecfp.py  featurizer.py  mordred_desc.py
ChemBench/models/: builders.py  predict.py  registry.py  save_load.py  train.py  tuning.py
ChemBench/utils/: logger.py  random_seed.py
ChemMultiBench/: __init__.py  api.py  cli.py
ChemMultiBench/config/: condition_alpha_cpu.json  condition_beta_gpu.json  condition_beta_gpu_large.json  condition_gamma_cpu.json  condition_gamma_gpu.json  condition_gamma_gpu_large.json  config_profile_large_fast.json  (+4 more)
examples/: run_fit.py  run_predict.py  sample_predict.csv  sample_train.csv
tests/: test_featurizer.py  test_train_predict.py  test_validation.py
(+14 files in other folders)
